# tools-for-agents

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: README.md
examples/company_research_agent/: .env.example  README.md  agent.py
src/tools_for_agents/: __init__.py  base.py  exceptions.py
src/tools_for_agents/tools/: CATALOG.md  __init__.py  google_search.py
src/tools_for_agents/tools/google_search/: README.md  __init__.py  google_search_tool.py
src/tools_for_agents/tools/web_fetch/: README.md  __init__.py  web_fetch_tool.py
